# bb-storage

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  go_dependencies.bzl  package-lock.json
.github/workflows/: codeql-analysis.yml  devskim-analysis.yml  main.yaml  master.yaml  pull-requests.yaml  snyk-infrastructure-analysis.yml
pkg/auth/: spiffe_authorizer.go
pkg/filesystem/: local_directory_disabled.go
pkg/global/: apply_configuration.go
pkg/grpc/: BUILD.bazel  authenticator.go  base_client_factory.go  server.go  tls_client_certificate_authenticator.go  tls_client_certificate_authenticator_test.go
pkg/proto/blobstore/local/: BUILD.bazel  local.pb.go
pkg/proto/cas/: BUILD.bazel
pkg/proto/configuration/: BUILD.bazel  registry.go
pkg/proto/configuration/auth/: BUILD.bazel  auth.pb.go  auth_starlark.pb.go
pkg/proto/configuration/bb_replicator/: BUILD.bazel  bb_replicator.pb.go  bb_replicator_starlark.pb.go
pkg/proto/configuration/bb_storage/: BUILD.bazel  bb_storage.pb.go  bb_storage_starlark.pb.go
pkg/proto/configuration/blobstore/: BUILD.bazel  blobstore.pb.go  blobstore_starlark.pb.go
pkg/proto/configuration/blockdevice/: BUILD.bazel  blockdevice.pb.go  blockdevice_starlark.pb.go
pkg/proto/configuration/builder/: BUILD.bazel  builder.pb.go  builder_starlark.pb.go
pkg/proto/configuration/cloud/aws/: BUILD.bazel  aws.pb.go  aws_starlark.pb.go
pkg/proto/configuration/digest/: BUILD.bazel  digest.pb.go  digest_starlark.pb.go
pkg/proto/configuration/eviction/: BUILD.bazel  eviction.pb.go  eviction_starlark.pb.go
pkg/proto/configuration/global/: BUILD.bazel  global.pb.go  global_starlark.pb.go
pkg/proto/configuration/grpc/: BUILD.bazel  grpc.pb.go  grpc_starlark.pb.go
pkg/proto/configuration/spiffe/: spiffe.pb.go
pkg/proto/configuration/tls/: BUILD.bazel  tls.pb.go  tls_starlark.pb.go
pkg/proto/icas/: icas.pb.go
pkg/proto/iscc/: iscc.pb.go
pkg/proto/replicator/: replicator.pb.go
pkg/spire/: spire_gke.go
pkg/starlarkutil/: BUILD.bazel  empty.go  status.go
pkg/util/: BUILD.bazel  jsonnet.go  starlark.go  starlark_test.go  tls.go
tools/: BUILD.bazel
tools/github_workflows/: BUILD.bazel  workflows_template.libsonnet
