load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "starlarkutil",
    srcs = [
        "empty.go",
        "status.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/starlarkutil",
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/rpc:status_go_proto",
        "@net_starlark_go//starlark:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
